--- a/client/package.json
+++ b/client/package.json
@@ -27,5 +27,8 @@
     "react-i18next": "^13.0.1",
     "sass": "^1.63.6",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.0.1"
   }
 }
