--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.0",
     "react-i18next": "^13.0.1",
     "sass": "^1.63.6",
     "typescript": "5.1.3"
