--- a/client/package.json
+++ b/client/package.json
@@ -10,26 +10,25 @@
     "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^1.2.2",
     "@svgr/webpack": "^8.0.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "accept-language": "^3.0.18",
     "encoding": "^0.1.13",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "eslint-plugin-i18next": "^6.0.3",
     "i18next": "^23.2.3",
-    "i18next-browser-languagedetector": "^7.0.2",
-    "i18next-http-backend": "^2.2.1",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-resources-to-backend": "^1.1.4",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.0.1",
     "sass": "^1.63.6",
     "typescript": "5.1.3"
-  },
-  "devDependencies": {
-    "@svgr/webpack": "^8.0.1"
   }
 }
