--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
-    "test:unit": "jest --config ./config/jest/jest.config.mjs"
+    "test:unit": "jest --config ./config/jest/jest.config.mjs",
+    "storybook": "storybook dev -p 6006 -c ./config/storybook",
+    "build-storybook": "storybook build -c ./config/storybook"
   },
   "dependencies": {
     "@radix-ui/react-select": "^1.2.2",
@@ -37,5 +39,16 @@
     "regenerator-runtime": "^0.13.11",
     "sass": "^1.63.6",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.24",
+    "@storybook/addon-interactions": "^7.0.24",
+    "@storybook/addon-links": "^7.0.24",
+    "@storybook/blocks": "^7.0.24",
+    "@storybook/nextjs": "^7.0.24",
+    "@storybook/react": "^7.0.24",
+    "@storybook/testing-library": "^0.0.14-next.2",
+    "eslint-plugin-storybook": "^0.6.12",
+    "storybook": "^7.0.24"
   }
 }
