--- a/client/package.json
+++ b/client/package.json
@@ -54,7 +54,7 @@
     "@storybook/react": "^7.0.24",
     "@storybook/testing-library": "^0.0.14-next.2",
     "eslint-plugin-storybook": "^0.6.12",
-    "storybook": "^7.0.24"
+    "storybook": "^7.0.24",
     "typescript": "5.1.3",
     "zod": "^3.21.4"
   }
