--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "next": "13.4.7",
+    "next-auth": "^4.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
@@ -54,7 +55,7 @@
     "@storybook/react": "^7.0.24",
     "@storybook/testing-library": "^0.0.14-next.2",
     "eslint-plugin-storybook": "^0.6.12",
-    "storybook": "^7.0.24"
+    "storybook": "^7.0.24",
     "typescript": "5.1.3",
     "zod": "^3.21.4"
   }
