--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-select": "^1.2.2",
+		"@reduxjs/toolkit": "^1.9.5",
 		"@svgr/webpack": "^8.0.1",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^14.0.0",
