--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
 		"next": "13.4.7",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-hook-form": "^7.45.1",
 		"react-i18next": "^13.0.1",
 		"regenerator-runtime": "^0.13.11",
 		"sass": "^1.63.6",
