--- a/client/package.json
+++ b/client/package.json
@@ -41,7 +41,8 @@
 		"react-i18next": "^13.0.1",
 		"regenerator-runtime": "^0.13.11",
 		"sass": "^1.63.6",
-		"typescript": "5.1.3"
+		"typescript": "5.1.3",
+		"zod": "^3.21.4"
 	},
 	"devDependencies": {
 		"@storybook/addon-essentials": "^7.0.24",
