--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -24,6 +24,13 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "process.d.ts",  "next-auth.d.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "process.d.ts",
+    "next-auth.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
