--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "react-hook-form": "^7.45.1",
     "react-i18next": "^13.0.1",
     "react-redux": "^8.1.1",
+    "react-toastify": "^9.1.3",
     "regenerator-runtime": "^0.13.11",
     "sass": "^1.63.6",
     "typescript": "5.1.3"
