--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "next": "13.4.7",
+    "next-router-mock": "^0.9.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.0.1",
