--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,11 @@
     "test:unit": "jest --config ./config/jest/jest.config.mjs"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-select": "^1.2.2",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@storybook/nextjs": "^7.0.26",
+    "@storybook/react": "^7.0.26",
     "@svgr/webpack": "^8.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -32,13 +36,17 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "next": "13.4.7",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-hook-form": "^7.45.1",
     "react-i18next": "^13.0.1",
+    "react-redux": "^8.1.1",
     "regenerator-runtime": "^0.13.11",
     "sass": "^1.63.6",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react-google-recaptcha": "^2.1.5"
