--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,10 +19,18 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "process.d.ts",
+    "next-auth.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
