--- a/client/package.json
+++ b/client/package.json
@@ -44,8 +44,7 @@
     "react-redux": "^8.1.1",
     "react-toastify": "^9.1.3",
     "regenerator-runtime": "^0.13.11",
-    "sass": "^1.63.6",
-    "typescript": "5.1.3"
+    "sass": "^1.63.6"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.24",
@@ -57,7 +56,7 @@
     "@storybook/testing-library": "^0.0.14-next.2",
     "eslint-plugin-storybook": "^0.6.12",
     "storybook": "^7.0.24",
-    "typescript": "5.1.3",
+    "typescript": "4.1.6",
     "zod": "^3.21.4"
   }
 }
