--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -4,9 +4,17 @@
     "plugin:storybook/recommended",
     "plugin:storybook/recommended"
   ],
-  "plugins": ["react", "@typescript-eslint", "i18next", "react-hooks"],
+  "plugins": [
+    "react",
+    "@typescript-eslint",
+    "i18next",
+    "react-hooks"
+  ],
   "rules": {
-    "semi": [2, "never"],
+    "semi": [
+      2,
+      "never"
+    ],
     "react/jsx-indent": [
       2,
       2,
@@ -24,7 +32,11 @@
     "react/jsx-filename-extension": [
       2,
       {
-        "extensions": [".js", ".jsx", ".tsx"]
+        "extensions": [
+          ".js",
+          ".jsx",
+          ".tsx"
+        ]
       }
     ],
     "import/no-unresolved": "off",
@@ -48,7 +60,11 @@
       1,
       {
         "markupOnly": true,
-        "ignoreAttribute": ["data-testid", "fallback", "to"]
+        "ignoreAttribute": [
+          "data-testid",
+          "fallback",
+          "to"
+        ]
       }
     ],
     "max-len": [
@@ -59,7 +75,10 @@
         "ignoreStrings": true
       }
     ],
-    "linebreak-style": ["error", "unix"],
+    "linebreak-style": [
+      "error",
+      "unix"
+    ],
     "jsx-a11y/no-static-element-interactions": "off",
     "jsx-a11y/click-events-have-key-events": "off",
     "react-hooks/rules-of-hooks": "error"
@@ -69,7 +88,9 @@
   },
   "overrides": [
     {
-      "files": ["**/src/**/*.{test,stories}.{ts,tsx}"],
+      "files": [
+        "**/src/**/*.{test,stories}.{ts,tsx}"
+      ],
       "rules": {
         "i18next/no-literal-string": "off",
         "max-len": "off"
