--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "@radix-ui/react-select": "^1.2.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "@svgr/webpack": "^8.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "@types/react-redux": "^7.1.25",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "accept-language": "^3.0.18",
     "axios": "^1.4.0",
@@ -38,6 +40,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.0.1",
+    "react-redux": "^8.1.1",
     "regenerator-runtime": "^0.13.11",
     "sass": "^1.63.6",
     "typescript": "5.1.3"
