--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-select": "^1.2.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "@storybook/addon-actions": "^7.1.0",
     "@svgr/webpack": "^8.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -37,8 +38,8 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "next": "13.4.7",
-    "next-router-mock": "^0.9.7",
     "next-auth": "^4.22.1",
+    "next-router-mock": "^0.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
@@ -47,6 +48,7 @@
     "react-toastify": "^9.1.3",
     "regenerator-runtime": "^0.13.11",
     "sass": "^1.63.6",
+    "type-fest": "^4.0.0",
     "typescript": "5.1.3"
   },
   "devDependencies": {
