--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,3 @@
 CHROMATIC_PROJECT_TOKEN="chpt_5fb313a47461f29"
+__API__="https://inctagram-api.fly.dev/"
+NEXT_PUBLIC_API=https://inctagram-api.fly.dev/
