--- a/client/src/.prettierrc.json
+++ b/client/src/.prettierrc.json
@@ -1,3 +1,8 @@
 {
-  "printWidth": 120
+  "semi": true,
+  "trailingComma": "all",
+  "singleQuote": true,
+  "printWidth": 80,
+  "tabWidth": 2,
+  "arrowParens": "avoid"
 }
