--- a/client/package.json
+++ b/client/package.json
@@ -56,6 +56,7 @@
     "@storybook/addon-interactions": "^7.0.24",
     "@storybook/addon-links": "^7.0.24",
     "@storybook/blocks": "^7.0.24",
+    "@storybook/jest": "^0.1.0",
     "@storybook/nextjs": "^7.0.24",
     "@storybook/react": "^7.0.24",
     "@storybook/testing-library": "^0.0.14-next.2",
