--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,6 @@
     "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-select": "^1.2.2",
     "@reduxjs/toolkit": "^1.9.5",
-    "@storybook/addon-actions": "^7.1.0",
     "@svgr/webpack": "^8.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -52,10 +51,12 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^7.1.1",
     "@storybook/addon-essentials": "^7.0.24",
     "@storybook/addon-interactions": "^7.0.24",
     "@storybook/addon-links": "^7.0.24",
     "@storybook/blocks": "^7.0.24",
+    "@storybook/jest": "^0.1.0",
     "@storybook/nextjs": "^7.0.24",
     "@storybook/react": "^7.0.24",
     "@storybook/testing-library": "^0.0.14-next.2",
