refactor: Improve sign-up stories. Refactored stories to use StoreDecorator with StoreProvider for Redux store access.

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -2,7 +2,8 @@
   "extends": [
     "next",
     "plugin:storybook/recommended",
-    "plugin:storybook/recommended"
+    "plugin:storybook/recommended",
+    "prettier"
   ],
   "plugins": ["react", "@typescript-eslint", "i18next", "react-hooks"],
   "rules": {
