--- a/client/package.json
+++ b/client/package.json
@@ -60,6 +60,7 @@
     "@storybook/react": "^7.0.24",
     "@storybook/testing-library": "^0.0.14-next.2",
     "eslint-plugin-storybook": "^0.6.12",
+    "prettier": "^3.0.0",
     "storybook": "^7.0.24",
     "zod": "^3.21.4"
   }
