--- a/client/src/.prettierrc.json
+++ b/client/src/.prettierrc.json
@@ -1,8 +1,9 @@
 {
-  "semi": true,
-  "trailingComma": "all",
-  "singleQuote": true,
-  "printWidth": 80,
+  "semi": false,
   "tabWidth": 2,
-  "arrowParens": "avoid"
+  "printWidth": 100,
+  "singleQuote": true,
+  "bracketSpacing": true,
+  "arrowParens": "avoid",
+  "trailingComma": "all"
 }
