--- a/client/package.json
+++ b/client/package.json
@@ -59,6 +59,7 @@
     "@storybook/nextjs": "^7.0.24",
     "@storybook/react": "^7.0.24",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "chromatic": "^6.20.0",
     "eslint-plugin-storybook": "^0.6.12",
     "storybook": "^7.0.24",
     "zod": "^3.21.4"
