--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-select": "^1.2.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@storybook/addon-actions": "^7.1.0",
