--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "next-router-mock": "^0.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.45.1",
     "react-i18next": "^13.0.1",
     "react-redux": "^8.1.1",
@@ -59,6 +60,7 @@
     "@storybook/nextjs": "^7.0.24",
     "@storybook/react": "^7.0.24",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/react-google-recaptcha": "^2.1.5",
     "eslint-plugin-storybook": "^0.6.12",
     "prettier": "^3.0.0",
     "storybook": "^7.0.24",
