--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,8 @@
     "next-auth": "^4.22.1",
     "next-router-mock": "^0.9.7",
     "react": "^18.2.0",
+    "react-avatar-edit": "^1.2.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.45.1",
