--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "next-router-mock": "^0.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.45.1",
     "react-i18next": "^13.0.1",
     "react-redux": "^8.1.1",
@@ -62,6 +63,7 @@
     "@storybook/nextjs": "^7.0.24",
     "@storybook/react": "^7.0.24",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/react-google-recaptcha": "^2.1.5",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-storybook": "^0.6.12",
