--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,6 @@
 CHROMATIC_PROJECT_TOKEN=chpt_5fb313a47461f29
+NEXT_PUBLIC_PRODUCTION_CLIENT_URL=https://inctagram-neon.vercel.app/
+NEXT_PUBLIC_DEVELOPMENT_CLIENT_URL=http://localhost:3000/
+NEXT_PUBLIC_API=https://inctagram-api.fly.dev/
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=997005052047-afadqfjinf1siuu8lsek0l2fljt8he97.apps.googleusercontent.com
+NEXT_PUBLIC_GITHUB_CLIENT_ID=43b3335372094e72c736
