--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@storybook/addon-actions": "^7.1.0",
     "@svgr/webpack": "^8.0.1",
+    "@tanstack/react-query": "^4.35.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/node": "20.3.1",
@@ -44,17 +45,20 @@
     "next-auth": "^4.22.1",
     "next-router-mock": "^0.9.7",
     "react": "^18.2.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.45.1",
     "react-i18next": "^13.0.1",
     "react-redux": "^8.1.1",
+    "react-router-dom": "5.3.0",
     "react-toastify": "^9.1.3",
     "regenerator-runtime": "^0.13.11",
     "sass": "^1.63.6",
     "type-fest": "^4.0.0",
     "typescript": "5.1.3",
-    "webpack": "^5.88.2"
+    "webpack": "^5.88.2",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.24",
@@ -65,6 +69,7 @@
     "@storybook/react": "^7.0.24",
     "@storybook/testing-library": "^0.0.14-next.2",
     "@types/react-google-recaptcha": "^2.1.5",
+    "@types/react-router-dom": "^5.3.3",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-storybook": "^0.6.12",
