--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "eslint-plugin-i18next": "^6.0.3",
+    "fast-json-stable-stringify": "^2.1.0",
     "i18next": "^23.2.3",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-resources-to-backend": "^1.1.4",
