--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
+    "@types/react-datepicker": "^4.15.1",
     "@types/react-dom": "18.2.6",
     "@types/react-redux": "^7.1.25",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
@@ -45,6 +46,7 @@
     "next-auth": "^4.22.1",
     "next-router-mock": "^0.9.7",
     "react": "^18.2.0",
+    "react-datepicker": "4.18.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
     "react-i18next": "^13.0.1",
