--- a/client/package.json
+++ b/client/package.json
@@ -49,9 +49,9 @@
     "react-datepicker": "4.18.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.0.1",
     "react-redux": "^8.1.1",
-    "react-toastify": "^9.1.3",
     "regenerator-runtime": "^0.13.11",
     "sass": "^1.63.6",
     "type-fest": "^4.0.0",
