--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-select": "^1.2.2",
+    "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@storybook/addon-actions": "^7.1.0",
     "@svgr/webpack": "^8.0.1",
