--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "next-auth": "^4.22.1",
     "next-router-mock": "^0.9.7",
     "react": "^18.2.0",
+    "react-cropper": "^2.3.3",
     "react-datepicker": "4.18.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
