--- a/client/package.json
+++ b/client/package.json
@@ -57,6 +57,7 @@
     "react-redux": "^8.1.1",
     "regenerator-runtime": "^0.13.11",
     "sass": "^1.63.6",
+    "swiper": "^11.0.5",
     "type-fest": "^4.0.0",
     "typescript": "5.1.3",
     "webpack": "^5.88.2"
