--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "@types/react": "18.2.13",
     "@types/react-datepicker": "^4.15.1",
     "@types/react-dom": "18.2.6",
+    "@types/react-google-recaptcha": "^2.1.8",
     "@types/react-redux": "^7.1.25",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "accept-language": "^3.0.18",
@@ -51,6 +52,7 @@
     "react-cropper": "^2.3.3",
     "react-datepicker": "4.18.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.0.1",
