--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "mobile-detect": "^1.4.5",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
     "next-router-mock": "^0.9.11",
