--- a/client/package.json
+++ b/client/package.json
@@ -79,6 +79,7 @@
     "eslint-plugin-storybook": "^0.6.12",
     "prettier": "^3.0.0",
     "storybook": "^7.0.24",
+    "storybook-addon-next-router": "^4.0.2",
     "zod": "^3.21.4"
   }
 }
