--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
+    "@next/bundle-analyzer": "^14.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-select": "^1.2.2",
     "@react-oauth/google": "^0.11.1",
