--- a/client/package.json
+++ b/client/package.json
@@ -27,9 +27,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/node": "20.3.1",
-    "@types/react": "18.2.13",
-    "@types/react-datepicker": "^4.15.1",
-    "@types/react-dom": "18.2.6",
+    "@types/react": "^18.2.64",
+    "@types/react-datepicker": "^6.0.3",
+    "@types/react-dom": "^18.2.21",
     "@types/react-google-recaptcha": "^2.1.8",
     "@types/react-redux": "^7.1.25",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
@@ -38,7 +38,7 @@
     "chromatic": "^6.22.0",
     "encoding": "^0.1.13",
     "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
+    "eslint-config-next": "^14.1.3",
     "eslint-plugin-i18next": "^6.0.3",
     "fast-json-stable-stringify": "^2.1.0",
     "i18next": "^23.2.3",
@@ -48,7 +48,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "mobile-detect": "^1.4.5",
-    "next": "13.4.7",
+    "next": "^14.1.3",
     "next-auth": "^4.22.1",
     "next-router-mock": "^0.9.11",
     "react": "^18.2.0",
@@ -63,7 +63,7 @@
     "regenerator-runtime": "^0.13.11",
     "sass": "^1.63.6",
     "sharp": "^0.33.2",
-    "swiper": "^11.0.5",
+    "swiper": "^11.0.7",
     "type-fest": "^4.0.0",
     "typescript": "5.1.3",
     "webpack": "^5.88.2"
@@ -82,5 +82,8 @@
     "prettier": "^3.0.0",
     "storybook": "^7.0.24",
     "zod": "^3.21.4"
+  },
+  "resolutions": {
+    "jackspeak": "2.1.1"
   }
 }
