--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "@types/react-google-recaptcha": "^2.1.8",
     "@types/react-redux": "^7.1.25",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@vercel/speed-insights": "^1.0.10",
     "accept-language": "^3.0.18",
     "axios": "^1.4.0",
     "chromatic": "^6.22.0",
